<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/settings"
        android:textSize="32sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_sound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sound" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_animation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/animation" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/back" />

</LinearLayout>