<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/game_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_screen"
        android:orientation="vertical"
        android:padding="@dimen/screen_padding">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/view_board"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/gamer_info_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/next_piece_block_container"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/text_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_primary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_lines"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/text_secondary"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/text_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/text_secondary"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/text_high_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/tetromino_o"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/next_piece_block_container"
                android:layout_width="104dp"
                android:layout_height="104dp"
                android:background="@drawable/bg_panel"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/gamer_info_container"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/next_piece_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next"
                    android:textColor="@color/text_secondary"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/view_next_piece"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.ndtphong.simpletetrisgame.ui.game.view.NextPieceView
                    android:id="@+id/view_next_piece"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="4dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/next_piece_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.ndtphong.simpletetrisgame.ui.game.view.TetrisBoardView
            android:id="@+id/view_board"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:background="@drawable/bg_board"
            app:layout_constraintBottom_toTopOf="@id/control_btn_container"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_container" />

        <LinearLayout
            android:id="@+id/control_btn_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_board">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_finish"
                    style="@style/TetrisButton"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/finish_game" />

                <Button
                    android:id="@+id/button_back"
                    style="@style/TetrisButton.Secondary"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/home" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_controls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <ImageButton
                    android:id="@+id/button_left"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button_secondary"
                    android:contentDescription="@string/move_left"
                    android:src="@drawable/ic_left"
                    android:stateListAnimator="@animator/button_press"
                    app:layout_constraintBottom_toTopOf="@id/button_hard_drop"
                    app:layout_constraintHorizontal_bias="0.6"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/button_soft_drop"
                    app:layout_constraintTop_toBottomOf="@id/button_rotate" />

                <ImageButton
                    android:id="@+id/button_rotate"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button_primary"
                    android:contentDescription="@string/rotate"
                    android:src="@drawable/ic_rotate"
                    android:stateListAnimator="@animator/button_press"
                    app:layout_constraintBottom_toTopOf="@id/button_soft_drop"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/button_soft_drop"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button_secondary"
                    android:contentDescription="@string/soft_drop"
                    android:src="@drawable/ic_down"
                    android:stateListAnimator="@animator/button_press"
                    app:layout_constraintBottom_toTopOf="@id/button_hard_drop"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/button_rotate" />

                <ImageButton
                    android:id="@+id/button_hard_drop"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button_primary"
                    android:contentDescription="@string/hard_drop"
                    android:src="@drawable/ic_hard_drop"
                    android:stateListAnimator="@animator/button_press"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/button_soft_drop" />

                <ImageButton
                    android:id="@+id/button_right"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button_secondary"
                    android:contentDescription="@string/move_right"
                    android:src="@drawable/ic_right"
                    android:stateListAnimator="@animator/button_press"
                    app:layout_constraintBottom_toTopOf="@id/button_hard_drop"
                    app:layout_constraintHorizontal_bias="0.4"
                    app:layout_constraintLeft_toRightOf="@id/button_soft_drop"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/button_rotate" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/text_game_over_overlay"
        style="@style/TetrisTitle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/game_over_overlay"
        android:gravity="center"
        android:text="@string/game_over"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>